[gd_scene load_steps=6 format=3 uid="uid://deamrdcsyafem"]

[ext_resource type="Script" path="res://Scenes/Tutorial.gd" id="1_f3xlj"]
[ext_resource type="Texture2D" uid="uid://c1wq40epls84g" path="res://Assets/LudumDare16x16.png" id="2_51u32"]
[ext_resource type="Texture2D" uid="uid://s8s5tb1ppy7o" path="res://Assets/LudumDare32x32.png" id="3_35hqr"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_gxu1g"]
light_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8mmvg"]
bg_color = Color(0.168627, 0.168627, 0.168627, 0.411765)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_color = Color(0, 0, 0, 0.109804)
shadow_size = 1
shadow_offset = Vector2(1.09, -2.635)

[node name="Tutorial" type="Node2D"]
z_index = 10
material = SubResource("CanvasItemMaterial_gxu1g")
script = ExtResource("1_f3xlj")

[node name="PanelContainer" type="PanelContainer" parent="."]
use_parent_material = true
offset_top = 8.0
offset_right = 128.0
offset_bottom = 273.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8mmvg")

[node name="Label" type="Label" parent="PanelContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 7
text = "Controls:

H to show / hide Help Window

WASD / Arrows to walk

E to grab items

B to Recall to the base after a short delay

Move to your base to buy units and upgrades

Tab / Mouse 3 / NUM 0 to show / hide building menu

M2 / Control / Num Period to open the minion control wheel. These can be used while no wheels are shown"
horizontal_alignment = 1
autowrap_mode = 3

[node name="PanelContainer2" type="PanelContainer" parent="."]
use_parent_material = true
offset_left = 136.0
offset_top = 8.0
offset_right = 264.0
offset_bottom = 273.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8mmvg")

[node name="Label" type="Label" parent="PanelContainer2"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 7
text = "Instructions:

Gather the elemental gems to build your army and improve your abilities to fight the encroaching entities

Defeat your enemies! By claiming your opponents heart, and taking it back to your base you have claimed victory over them. Collect all 6 to win!

Explore! There is a lot that can be gained by understanding the layout of the world

Place lights! They can be used to make your supply lines, or your battle plans"
horizontal_alignment = 1
autowrap_mode = 3

[node name="PanelContainer3" type="PanelContainer" parent="."]
use_parent_material = true
offset_left = 272.0
offset_top = 8.0
offset_right = 400.0
offset_bottom = 272.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8mmvg")

[node name="Label" type="Label" parent="PanelContainer3"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 7
text = "Instructions:

Guide your minions in combat and collection. They will aid you to the death

Minions can be left to complete tasks automatically, but will not search very far

If your minions encounter enemies while idle they will fight, likely to the death

In total; gather resouces, improves your stats and defenses then, hunt your enemies before they have grown out of control"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer3"]
use_parent_material = true
position = Vector2(-128, 48)
texture = ExtResource("2_51u32")
region_enabled = true
region_rect = Rect2(0, 16, 16, 16)

[node name="Sprite2D2" type="Sprite2D" parent="PanelContainer3"]
use_parent_material = true
position = Vector2(-128, 152)
texture = ExtResource("2_51u32")
region_enabled = true
region_rect = Rect2(0, 48, 16, 16)

[node name="Sprite2D3" type="Sprite2D" parent="PanelContainer3"]
use_parent_material = true
position = Vector2(-128, 256)
texture = ExtResource("2_51u32")
region_enabled = true
region_rect = Rect2(48, 16, 16, 16)

[node name="Sprite2D4" type="Sprite2D" parent="PanelContainer3"]
use_parent_material = true
position = Vector2(64, 16)
texture = ExtResource("2_51u32")
region_enabled = true
region_rect = Rect2(32, 16, 16, 16)

[node name="Sprite2D5" type="Sprite2D" parent="PanelContainer3"]
use_parent_material = true
position = Vector2(-208, 136)
texture = ExtResource("3_35hqr")
region_enabled = true
region_rect = Rect2(0, 32, 16, 16)

[node name="Label" type="Label" parent="."]
use_parent_material = true
offset_left = -8.0
offset_top = 280.0
offset_right = 32.0
offset_bottom = 303.0
theme_override_colors/font_color = Color(1, 0.0156863, 0.686275, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "H"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Label"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 24.0
offset_bottom = 16.0
scale = Vector2(0.972015, 1.01769)

[connection signal="pressed" from="Label/Button" to="." method="_on_button_pressed"]
